tests/error/type_errors/or_not_bool_right.err
Guppy compilation failed. Error in file $FILE:12

10:    @guppy(module)
11:    def foo(x: bool, y: NonBool) -> bool:
12:        return x or y
                       ^
GuppyTypeError: Expression of type `NonBool` cannot be interpreted as a `bool`
